--- a/action.yml
+++ b/action.yml
@@ -1,18 +1,23 @@
 name: 'Publish Conda'
 description: 'Build and Publish Conda package to Anaconda'
-author: 'Fatih C Akyon'
+author: 'Vlad Savelyev'
+
 branding:
   icon: 'package'  
   color: 'purple'
-inputs: 
+
+inputs:
   subdir:
     description: 'Sub-directory with conda recipe'
-    default: '.'
+    required: true
   anacondatoken:
     description: 'Anaconda access token'
+    required: true
   platforms:
     description: 'Platforms to publish [osx/linux/win]'
-    default: 'win osx linux'
+    default: 'linux osx'
+    required: false
+
 runs:
   using: 'docker'
   image: 'Dockerfile'
